# Algernon

./: .clang-format  CMakeLists.txt  README.md
algernon/: CMakeLists.txt
algernon/algorithms/conway/: conway.cpp  conway.h
algernon/algorithms/laplacian_smoothing/: laplacian_smoothing.cpp  laplacian_smoothing.h
algernon/algorithms/marching_cubes/: marching_cubes.cpp  marching_cubes.h  marching_cubes_tables.cpp
algernon/algorithms/subdivision/: catmull_clark.cpp  catmull_clark.h  subdivision.h
algernon/algorithms/triangulation/: delaunay.cpp  delaunay.h  triangulation.h
algernon/common/: algernon.h
algernon/core/: core.cpp  core_types.cpp
algernon/core/include/: core.h  core_types.h  hash_combine.h  transform_iterator.h
algernon/geometry/: geometry.cpp  geometry_builder.cpp  geometry_compression.cpp  geometry_element.cpp  geometry_element_walkers.cpp  geometry_elements.cpp  geometry_mutation.cpp  geometry_tools.cpp
algernon/geometry/include/: geometry.h  geometry.ipp  geometry_element.h  geometry_element_iterator.h  geometry_element_walkers.h  geometry_elements.h  geometry_tools.h
algernon/mathematics/: bounding_box.cpp
algernon/mathematics/include/: bounding_box.h  mathematics_types.h
algernon/mesh/SDF/: SDF.cpp  SDF.h
algernon/mesh/core/: face.cpp  face_indices.cpp  khronos_loader.cpp  mesh.cpp  mesh_loader.cpp  mesh_tools.cpp  wavefront_loader.cpp
algernon/mesh/include/: face.h  face.ipp  face_indices.h  face_indices.ipp  mesh.h  mesh_tools.h  plane.h  polygon.h  polyhedron.h  sphere.h
algernon/mesh/shapes/: plane.cpp  polygon.cpp  polyhedron.cpp  segment.cpp  sphere.cpp  triangle.cpp
algernon/mesh/shapes/include/: polygon.h  polyhedron.h  segment.h  sphere.h  triangle.h
cmake/: libraries.cmake
examples/: CMakeLists.txt
examples/marching_cubes/: marching_cubes.cpp
examples/mesh_mutation/: mesh_mutation.cpp
examples/shapes/: shapes.cpp
tests/: CMakeLists.txt  geometry_test.cpp  mesh_test.cpp
